--- a/crude_app/config.env
+++ b/crude_app/config.env
@@ -1,2 +1,3 @@
 PORT = 8030
-hostname = '127.0.0.1'
+hostname=  '127.0.0.1'
+MONGO_URI = mongodb+srv://123abcd456:123abcd456@cluster0.ivxyb.mongodb.net/Employees?retryWrites=true&w=majority
